<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_qq_login"
        style="@style/white14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_um_login"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login_qq" />

    <TextView
        android:id="@+id/tv_wx_login"
        style="@style/white14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_um_login"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login_wx" />


    <TextView
        android:id="@+id/tv_auth_login"
        style="@style/white14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_um_login"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login_auth" />

    <TextView
        android:id="@+id/tv_phone_login"
        style="@style/white14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_um_login"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login_phone" />

</LinearLayout>