<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBack"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <include layout="@layout/include_title" />




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:padding="15dp">


        <!-- <LinearLayout
             android:id="@+id/ll_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">-->

        <TextView
            android:id="@+id/tv_contact_mark"
            style="@style/blank16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact" />

        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_contact_mark">

            <EditText
                android:id="@+id/et_name"
                style="@style/blank16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nulls"
                android:hint="@string/hint_name"
                android:maxLength="5"
                android:paddingLeft="10dp"
                android:singleLine="true" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/et_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrayBack" />

        </RelativeLayout>

        <!--  </LinearLayout>-->


        <TextView
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_name"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/tv_contact_mark"
            android:background="@drawable/bg_sex"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/man"
            android:textColor="@color/colorGrayText" />


        <TextView
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_name"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/man"
            android:background="@drawable/bg_sex"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/woman"
            android:textColor="@color/colorGrayText" />


        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/woman"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrayBack" />


        <TextView
            android:id="@+id/tv_phone_mark"
            style="@style/blank16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/et_phoneNumber"
            style="@style/blank16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rl_name"
            android:layout_below="@+id/line2"
            android:layout_toRightOf="@+id/tv_phone_mark"
            android:background="@drawable/nulls"
            android:hint="@string/hint_home_phoneNumber"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:singleLine="true" />


        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_phone_mark"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrayBack" />


        <TextView
            android:id="@+id/tv_address_mark"
            style="@style/blank16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line3"
            android:text="@string/dizhi" />


        <TextView
            android:id="@+id/et_address1"
            style="@style/blank16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_phoneNumber"
            android:layout_below="@+id/line3"
            android:layout_toRightOf="@+id/tv_address_mark"
            android:background="@drawable/nulls"
            android:hint="小区/写字楼/学校等"
            android:drawableRight="@mipmap/u_06"
            android:paddingLeft="10dp"
            android:singleLine="true" />


        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_address1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrayBack" />


        <EditText
            android:id="@+id/address2"
            style="@style/blank16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_address1"
            android:layout_below="@+id/line4"
            android:background="@drawable/nulls"
            android:hint="@string/address_detail"
            android:paddingLeft="10dp" />


    </RelativeLayout>


    <TextView
        android:id="@+id/tv_ok"
        style="@style/white16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_btn"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/ok" />


</LinearLayout>